ingress/haproxy-ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress-controller-deploy
  name: haproxy-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress-controller
  template:
    metadata:
      labels:
        run: haproxy-ingress-controller
    spec:
      containers:
      - name: haproxy-ingress-controller
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --default-backend-service=default/http-default-backend
        - --default-ssl-certificate=default/tls-secret
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
